--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    
+
+    def room_version = "2.4.3"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
 }
